chore: update authv3
